--- a/src/app/(frontend)/globals.css
+++ b/src/app/(frontend)/globals.css
@@ -102,3 +102,9 @@ html[data-theme='dark'],
 html[data-theme='light'] {
   opacity: initial;
 }
+
+.logo {
+  font-size: auto;
+  font-weight: auto;
+  font-variation-settings: "wdth" 125;
+}
